Nesse novo commit, foi concluido a parte de solicitação de Cuidadoso

--- a/views/Perfil.ejs
+++ b/views/Perfil.ejs
@@ -1,8 +1,4 @@
-<% if(cadastro.TipoConta=='Administrador'){ %>
 
-  <%-include('partials/adm.ejs') %>
-
-<% }else{ %>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,8 +11,15 @@
     <%-include('partials/header.ejs') %>
       <!-- End Header -->
 
-      <main id="main">
+      
 
+        <% if(TipoConta == 'Administrador'){ %>
+
+          <%-include('partials/admin.ejs') %>
+
+            <% }else{ %>
+
+              <main id="main">
         <!-- ======= Breadcrumbs ======= -->
         <section id="breadcrumbs" class="breadcrumbs">
           <div class="container">
@@ -25,8 +28,11 @@
               <li><a href="/contrate">Cuidadosos</a></li>
               <li>Perfil Cuidadoso</li>
             </ol>
+
+       
             <h2>
               <%=cadastro.Nome %>
+              
             </h2>
 
           </div>
@@ -53,12 +59,50 @@
               <div class="col-lg-6">
                 <div class="portfolio-info">
                   <h3>
-                    <%=cadastro.Nome %> <% if(cadastro.TipoConta=='Administrador'){ %>
+                   
+                    
+                    <% if(cadastro.TipoConta=='Administrador'){ %>
                       (<%=cadastro.TipoConta %>)
                       <% } %>
                       <% if(cadastro.id !=userId){ %>
-                        <a title="Adicionar aos favoritos" href=""><span class="bi bi-heart"></span></a>
+                        <div style="display: flex;">
+
+                          <div>
+                          <%=cadastro.Nome %> 
+                          </div>
+                           
+                        
+                        
+                        <div style="margin-left: 5px;"  title="Like" class="heart-container">
+                          
+                          <input id="Give-It-An-Id" class="checkbox" type="checkbox">
+                          
+                          <div class="svg-container">
+
+                              <svg xmlns="http://www.w3.org/2000/svg" class="svg-outline" viewBox="0 0 24 24">
+                                  <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Zm-3.585,18.4a2.973,2.973,0,0,1-3.83,0C4.947,16.006,2,11.87,2,8.967a4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,11,8.967a1,1,0,0,0,2,0,4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,22,8.967C22,11.87,19.053,16.006,13.915,20.313Z">
+                                  </path>
+                              </svg>
+                              <svg xmlns="http://www.w3.org/2000/svg" class="svg-filled" viewBox="0 0 24 24">
+                                  <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Z">
+                                  </path>
+                              </svg>
+                              <svg xmlns="http://www.w3.org/2000/svg" height="100" width="100" class="svg-celebrate">
+                                  <polygon points="10,10 20,20"></polygon>
+                                  <polygon points="10,50 20,50"></polygon>
+                                  <polygon points="20,80 30,70"></polygon>
+                                  <polygon points="90,10 80,20"></polygon>
+                                  <polygon points="90,50 80,50"></polygon>
+                                  <polygon points="80,80 70,70"></polygon>
+                              </svg>
+                          </div> 
+                      </div> 
+                    </div>
+                    
                         <% } %>
+                       
+
+                       
 
                         <% if(cadastro.id==userId){ %>
                             <button style="margin-left: 5%;" onclick="divft()" class="btn btn-outline-secondary   ">
@@ -72,7 +116,7 @@
 
                     <div style="display: none;" class="container divft">
 
-                      <form action="/upload" method="POST" enctype="multipart/form-data">
+                      <form action="/UploadFTPerfil" method="POST" enctype="multipart/form-data">
                         <br>
                         <h6>Selecione sua foto</h6>
                         <input style="width: 98%;" class="btn  btn-outline-secondary   " type="file" name="imagem"
@@ -92,7 +136,7 @@
 
                   <ul>
                     <h4 style="text-align: center;">
-                      <%=cadastro.Cidade %>
+                      <%=cadastro.Cidade %> - <%=cadastro.Bairro %>
                     </h4><br>
                     <li><strong>Idade</strong>: <%=cadastro.DataNacimento%>
                     </li>
@@ -104,10 +148,31 @@
                     </li>
                     <li><strong>Email</strong>: <%=cadastro.Email %>
                     </li><br><br>
+
+                   
                
                   </ul>
                   <div style="text-align: center;" class="container ">
-                    <br>
+                    
+                    <h1>R$<%=cadastro.Diaria%>,00 
+                    <% if(cadastro.id == userId){ %>
+                      <button onclick="divdiaria()" class="pencil"><i class="fas fa-pencil-alt"></i></button>
+
+                      <% } %>
+                    </h1>
+
+                    <div style="display: none;" class="divdiaria">
+                      <h4>Valor da sua Diaria</h4>
+                      <br>
+                      <form action="/NovaDiaria" method="post">
+                        <input type="hidden" name="idperfil" value="<%=cadastro.id %>">
+                        <input pl class="form-control " type="number" name="novadiaria"><br>
+                        <button class="form-control " type="submit">Salvar</button>
+                      </form>
+
+                    </div>
+
+
                     <hr><br>
                     <% if(cadastro.id !=userId){ %>
 
@@ -190,17 +255,22 @@
                       
 
                         <div class="col-xl-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="10">
-                          
-                        <% for(let index = 1 ; index < agenda.dias+1 ; index++){ %>
-                        
-                          <% if(index != diasagendados){ %>
-                            <button title="Dia Disponivel" class="btn btn-outline-success "><%=index %></button>
-                            <% }else{ %>
-                              <button title="Cuidadoso Ocupado" class="btn btn-danger  "><%=index %></button>
+                          <% for (let index = 1; index < agenda.dias + 1; index++) { %>
+                            <% let diaDisponivel = true; %>
+                            <% for (let i = 0; i < solicitacoes.length; i++) { %>
+                              <% if (index === solicitacoes[i].DiaAtendimento) { %>
+                                <% diaDisponivel = false; %>
+                                <button title="Cuidadoso Ocupado" class="btn btn-danger"><%= index %></button>
+                                <% break; %>
                               <% } %>
+                            <% } %>
+                            <% if (diaDisponivel) { %>
+                              <button title="Dia Disponivel" class="btn btn-outline-success"><%= index %></button>
+                            <% } %>
+                          <% } %>
+                          
 
                           
-                          <% } %>
 
                           
                         </div>
@@ -353,7 +423,8 @@
       
 
 
-      </main><!-- End #main -->
+        </main><!-- End #main -->
+      <% } %>
 
       <!-- ======= Footer ======= -->
       <%-include('partials/footer.ejs') %>
@@ -380,4 +451,3 @@
 </html>
 
 
-<% } %>
