--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
             <img src="/img/cuidador-de-idoso-santo-amaro.png" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
+          <div class="col-lg-6 pt-5 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h3>Cuidadoso Roberta Miranda</h3>
             <p class="fst-italic">
               Roberta inscreveu-se no Cuidadoso em 21 de setembro de 2020 e, desde então, tem prestado acompanhamento a vários idosos. O gráfico a seguir ilustra a quantidade de serviços de acompanhamento que ela ofereceu por meio do Cuidadoso
@@ -46,28 +46,28 @@
             <div class="skills-content">
 
               <div class="progress">
-                <span class="skill">2020 <i class="val">9</i></span>
+                <span class="skill">2020 <i class="val">9 Acompanhamentos</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="9" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">2021 <i class="val">18</i></span>
+                <span class="skill">2021 <i class="val">18 Acompanhamentos</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="18" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">2022 <i class="val">27</i></span>
+                <span class="skill">2022 <i class="val">27 Acompanhamentos</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="29" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">2023 <i class="val">38</i></span>
+                <span class="skill">2023 <i class="val">38 Acompanhamentos</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="38" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -145,65 +145,7 @@
 
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Planos</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="box">
-              <h3>Cuidadoso Basic</h3>
-              <h4><sup>R$</sup>0<span>Por Mês</span></h4>
-              <ul>
-                <li><i class="bx bx-check"></i>Postagens limitadas no Perfil</li>
-                <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-                <li class="na"><i class="bx bx-x"></i> <span>Visibilidade Premium</span></li>
-                <li class="na"><i class="bx bx-x"></i> <span>Cuidadoso Recomendado</span></li>
-              </ul>
-              <a href="#" class="buy-btn">Assinar</a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
-            <div class="box featured">
-              <h3>Cuidadoso Standart</h3>
-              <h4><sup>R$</sup>29<span>Por Mês</span></h4>
-              <ul>
-                <li><i class="bx bx-check"></i> Postagens Ilimitadas no Perfil</li>
-                <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-                <li><i class="bx bx-check"></i> Visibilidade Premium</li>
-                <li><i class="bx bx-check"></i>  Cuidadoso Recomendado</li>
-              </ul>
-              <a href="#" class="buy-btn">Assinar</a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
-            <div class="box">
-              <h3>Cuidadoso Pro</h3>
-              <h4><sup>R$</sup>49<span>Por Mês</span></h4>
-              <ul>
-                <li><i class="bx bx-check"></i> Postagens Ilimitadas no Perfil</li>
-                <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-                <li><i class="bx bx-check"></i>Visibilidade Premium</li>
-                <li><i class="bx bx-check"></i>  Cuidadoso Recomendado </li>
-              </ul>
-              <a href="#" class="buy-btn">Assinar</a>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Pricing Section -->
+   
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
@@ -309,9 +251,9 @@ Profissionais ao alcance de um clique, descubra o especialista que melhor atende
 
         <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
           <li data-filter="*" class="filter-active">Recentes</li>
-          <li data-filter=".filter-app">App</li>
-          <li data-filter=".filter-card">Card</li>
-          <li data-filter=".filter-web">Web</li>
+          <li data-filter=".filter-app">Ultima Semana</li>
+          <li data-filter=".filter-card">Ultimo Mes</li>
+          <li data-filter=".filter-web">Ano passado</li>
         </ul>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
@@ -324,8 +266,7 @@ Profissionais ao alcance de um clique, descubra o especialista que melhor atende
               <h4><%=posts[index].Assunto %></h4>
               <p><%=posts[index].NomeCadastro %></p>
               <div class="container ">
-              <a href="data:image/jpeg;base64,<%=posts[index].Foto %> " data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="/Perfil/<%=posts[index].IDCadastro %>" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="/Perfil/<%=posts[index].IDCadastro %>" class="details-link" title="More Details"><i class="fas fa-user fa-1x"></i></a>
             </div>
             </div>
           </div>
@@ -402,6 +343,113 @@ Profissionais ao alcance de um clique, descubra o especialista que melhor atende
       </div>
     </section><!-- End Frequently Asked Questions Section -->
 
+
+ <!-- ======= Team Section ======= -->
+ <section id="team" class="team section-bg">
+  <div class="container" data-aos="fade-up">
+
+    <div class="section-title">
+      <h2>Fundadores</h2>
+      <p>Na Cuidadoso, nossa jornada é impulsionada por um compromisso apaixonado com a excelência e a conexão. Fundada por visionários dedicados, nossa equipe se uniu para criar uma plataforma que transcende barreiras, conectando profissionais excepcionais com aqueles que buscam seus serviços especializados.
+
+        Nossa visão é simples, mas profunda: acreditamos que cada interação entre cliente e profissional deve ser enriquecedora, segura e significativa. É por isso que dedicamos nossa energia e experiência para construir uma ponte confiável entre essas duas partes.
+        
+        Em nome de nossa equipe, bem-vindos à Cuidadoso. Estamos aqui para facilitar a descoberta, a comunicação e o progresso, transformando a maneira como o mundo encontra e colabora com profissionais notáveis. Juntos, estamos construindo um futuro onde o cuidado e a excelência se encontram</p>
+    </div>
+
+    <div class="row">
+
+      <div class="col-lg-6" data-aos="zoom-in" data-aos-delay="100">
+        <div class="member d-flex align-items-start">
+          <div class="pic"><img src="/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+          <div class="member-info">
+            <h4>Pedro Henrique Rodrigues Pires</h4>
+            <span> Diretor Executivo</span>
+          
+            <div class="social">
+              <a href=""><i class="ri-twitter-fill"></i></a>
+              <a href=""><i class="ri-facebook-fill"></i></a>
+              <a href="https://www.instagram.com/pedro_pirezz/"><i class="ri-instagram-fill"></i></a>
+              <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="200">
+        <div class="member d-flex align-items-start">
+          <div class="pic"><img src="/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+          <div class="member-info">
+            <h4>Lorena Miguel Xavier</h4>
+            <span>Gerente de Produto</span>
+            
+            <div class="social">
+              <a href=""><i class="ri-twitter-fill"></i></a>
+              <a href=""><i class="ri-facebook-fill"></i></a>
+              <a href="https://www.instagram.com/lorenaamiguel/"><i class="ri-instagram-fill"></i></a>
+              <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mt-4" data-aos="zoom-in" data-aos-delay="300">
+        <div class="member d-flex align-items-start">
+          <div class="pic"><img src="/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+          <div class="member-info">
+            <h4>Luccas Torres Satana</h4>
+            <span>CTO</span>
+          
+            <div class="social">
+              <a href=""><i class="ri-twitter-fill"></i></a>
+              <a href=""><i class="ri-facebook-fill"></i></a>
+              <a href="https://www.instagram.com/lucaaoox/"><i class="ri-instagram-fill"></i></a>
+              <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mt-4" data-aos="zoom-in" data-aos-delay="300">
+        <div class="member d-flex align-items-start">
+          <div class="pic"><img src="/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+          <div class="member-info">
+            <h4>Matheus Vinicius</h4>
+            <span>CTO</span>
+            
+            <div class="social">
+              <a href=""><i class="ri-twitter-fill"></i></a>
+              <a href=""><i class="ri-facebook-fill"></i></a>
+              <a href="https://www.instagram.com/theus_av/"><i class="ri-instagram-fill"></i></a>
+              <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mt-4" data-aos="zoom-in" data-aos-delay="400">
+        <div class="member d-flex align-items-start">
+          <div class="pic"><img src="/img/team/team-5.jpg" class="img-fluid" alt=""></div>
+          <div class="member-info">
+            <h4>Thiago Henrique Magela</h4>
+            <span>Contador</span>
+            
+            <div class="social">
+              <a href=""><i class="ri-twitter-fill"></i></a>
+              <a href=""><i class="ri-facebook-fill"></i></a>
+              <a href="https://www.instagram.com/thiago.hf_/"><i class="ri-instagram-fill"></i></a>
+              <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section><!-- End Team Section -->
+
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
@@ -472,110 +520,7 @@ Profissionais ao alcance de um clique, descubra o especialista que melhor atende
       </div>
     </section><!-- End Contact Section -->
 
-    <!-- ======= Team Section ======= -->
-    <section id="team" class="team section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Fundadores</h2>
-          <p>Na Cuidadoso, nossa jornada é impulsionada por um compromisso apaixonado com a excelência e a conexão. Fundada por visionários dedicados, nossa equipe se uniu para criar uma plataforma que transcende barreiras, conectando profissionais excepcionais com aqueles que buscam seus serviços especializados.
-
-            Nossa visão é simples, mas profunda: acreditamos que cada interação entre cliente e profissional deve ser enriquecedora, segura e significativa. É por isso que dedicamos nossa energia e experiência para construir uma ponte confiável entre essas duas partes.
-            
-            Em nome de nossa equipe, bem-vindos à Cuidadoso. Estamos aqui para facilitar a descoberta, a comunicação e o progresso, transformando a maneira como o mundo encontra e colabora com profissionais notáveis. Juntos, estamos construindo um futuro onde o cuidado e a excelência se encontram</p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-6" data-aos="zoom-in" data-aos-delay="100">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="/img/team/team-1.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Pedro Henrique Rodrigues Pires</h4>
-                <span> Diretor Executivo</span>
-              
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href="https://www.instagram.com/pedro_pirezz/"><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="200">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="/img/team/team-2.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Lorena Miguel Xavier</h4>
-                <span>Gerente de Produto</span>
-                
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href="https://www.instagram.com/lorenaamiguel/"><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4" data-aos="zoom-in" data-aos-delay="300">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="/img/team/team-3.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Luccas Torres Satana</h4>
-                <span>CTO</span>
-              
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href="https://www.instagram.com/lucaaoox/"><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4" data-aos="zoom-in" data-aos-delay="300">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="/img/team/team-4.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Matheus Vinicius</h4>
-                <span>CTO</span>
-                
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href="https://www.instagram.com/theus_av/"><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4" data-aos="zoom-in" data-aos-delay="400">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="/img/team/team-5.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Thiago Henrique Magela</h4>
-                <span>Contador</span>
-                
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href="https://www.instagram.com/thiago.hf_/"><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Team Section -->
+   
 
   </main><!-- End #main -->
 
