--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -25,6 +25,10 @@
     <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-Rnd8+u4RLvRE4R84qqjlkgIb1PivhTcEBO+5m5ZDorYbRI2I6b2A/+JadJl56iM7jNHzO6spPS+8BnE7GD4tRQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-dTfge/zZ2S5p3yZ4l/bN6z7pj8kN0eXo/0ZG2GHMsnR1UeaGj3p5FZBJi9BAQx9P5Ji9P6lsSO7x0QvSUrJr3A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
     <!-- Template Main CSS File -->
     <link href="/css/style.css" rel="stylesheet">
