--- a/public/css/style.css
+++ b/public/css/style.css
@@ -793,7 +793,7 @@ section {
 --------------------------------------------------------------*/
 .skills .content h3 {
   font-weight: 700;
-  font-size: 32px;
+  font-size: 20px;
   color: #37517e;
   font-family: "Poppins", sans-serif;
 }
@@ -824,6 +824,23 @@ section {
   border-radius: 0;
 }
 
+
+.ftperfilservico{
+  height: 100vh;
+  width: 100%;
+}
+
+@media screen and (orientation: portrait) {
+  .ftperfilservico{
+    height: 60vh;
+    width: 100%;
+  }
+  .sol{
+    text-align: center;
+     margin-left: 15%;
+  }
+}
+
 .skills .progress .skill {
   padding: 0;
   margin: 0 0 6px 0;
@@ -832,9 +849,11 @@ section {
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   color: #37517e;
+  margin-top: 5%;
 }
 
 .skills .progress .skill .val {
+  margin-top: 5%;
   float: right;
   font-style: normal;
 }
@@ -1641,6 +1660,98 @@ section {
 .breadcrumbs ol li+li {
   padding-left: 10px;
 }
+.rating {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 0.3rem;
+  --stroke: #666;
+  --fill: #ffc73a;
+}
+
+.rating input {
+  appearance: unset;
+}
+
+.rating label {
+  cursor: pointer;
+}
+
+.rating svg {
+  width: 2rem;
+  height: 2rem;
+  overflow: visible;
+  fill: transparent;
+  stroke: var(--stroke);
+  stroke-linejoin: bevel;
+  stroke-dasharray: 12;
+  animation: idle 4s linear infinite;
+  transition: stroke 0.2s, fill 0.5s;
+}
+
+@keyframes idle {
+  from {
+    stroke-dashoffset: 24;
+  }
+}
+
+.rating label:hover svg {
+  stroke: var(--fill);
+}
+
+.rating input:checked ~ label svg {
+  transition: 0s;
+  animation: idle 4s linear infinite, yippee 0.75s backwards;
+  fill: var(--fill);
+  stroke: var(--fill);
+  stroke-opacity: 0;
+  stroke-dasharray: 0;
+  stroke-linejoin: miter;
+  stroke-width: 8px;
+}
+
+@keyframes yippee {
+  0% {
+    transform: scale(1);
+    fill: var(--fill);
+    fill-opacity: 0;
+    stroke-opacity: 1;
+    stroke: var(--stroke);
+    stroke-dasharray: 10;
+    stroke-width: 1px;
+    stroke-linejoin: bevel;
+  }
+
+  30% {
+    transform: scale(0);
+    fill: var(--fill);
+    fill-opacity: 0;
+    stroke-opacity: 1;
+    stroke: var(--stroke);
+    stroke-dasharray: 10;
+    stroke-width: 1px;
+    stroke-linejoin: bevel;
+  }
+
+  30.1% {
+    stroke: var(--fill);
+    stroke-dasharray: 0;
+    stroke-linejoin: miter;
+    stroke-width: 8px;
+  }
+
+  60% {
+    transform: scale(1.2);
+    fill: var(--fill);
+  }
+}
+
+
+
+
+
+
+
+
 
 .breadcrumbs ol li+li::before {
   display: inline-block;
@@ -1669,6 +1780,17 @@ section {
   font-size: 24px;
   margin: 0 0 20px 0;
   padding: 0;
+
+
+
+
+
+
+
+
+
+
+
   line-height: 1;
   font-weight: 600;
   color: #37517e;
@@ -1698,6 +1820,7 @@ section {
   border: 0;
   background: none;
   font-size: 16px;
+
   padding: 0 20px;
   background: #47b2e4;
   color: #fff;
@@ -1727,6 +1850,7 @@ section {
   text-transform: uppercase;
   font-weight: 600;
   color: #37517e;
+
 }
 
 #footer .footer-top .footer-contact p {
@@ -1756,6 +1880,14 @@ section {
 }
 
 #footer .footer-top .footer-links ul i {
+
+
+
+
+
+
+
+
   padding-right: 2px;
   color: #47b2e4;
   font-size: 18px;
@@ -1959,4 +2091,103 @@ section {
   
   border-color: transparent;
   background-color: transparent;
+}
+
+
+.heart-container {
+  --heart-color: rgb(91, 173, 255);
+  position: relative;
+  width: 20px;
+  height: 20px;
+  transition: .3s;
+}
+
+.heart-container .checkbox {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 20;
+  cursor: pointer;
+}
+
+.heart-container .svg-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.heart-container .svg-outline,
+        .heart-container .svg-filled {
+  fill: var(--heart-color);
+  position: absolute;
+}
+
+.heart-container .svg-filled {
+  animation: keyframes-svg-filled 1s;
+  display: none;
+}
+
+.heart-container .svg-celebrate {
+  position: absolute;
+  animation: keyframes-svg-celebrate .5s;
+  animation-fill-mode: forwards;
+  display: none;
+  stroke: var(--heart-color);
+  fill: var(--heart-color);
+  stroke-width: 2px;
+}
+
+.heart-container .checkbox:checked~.svg-container .svg-filled {
+  display: block
+}
+
+.heart-container .checkbox:checked~.svg-container .svg-celebrate {
+  display: block
+}
+
+@keyframes keyframes-svg-filled {
+  0% {
+    transform: scale(0);
+  }
+
+  25% {
+    transform: scale(1.2);
+  }
+
+  50% {
+    transform: scale(1);
+    filter: brightness(1.5);
+  }
+}
+
+@keyframes keyframes-svg-celebrate {
+  0% {
+    transform: scale(0);
+  }
+
+  50% {
+    opacity: 1;
+    filter: brightness(1.5);
+  }
+
+  100% {
+    transform: scale(1.4);
+    opacity: 0;
+    display: none;
+  }
+}
+.pencil{
+ 
+  border: transparent;
+  background-color: transparent;
+}
+.pencil:hover{
+  
+  transform: scale(110%);
+}
+.bandeira{
+  width: 500px;
 }
