--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
 
 
 
-                <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+                <div class="col-lg-9 mt-5 mt-lg-0 d-flex align-items-stretch">
 
                   <form action="/validarlogin" method="post" role="form" class="php-email-form">
                     <div style="text-align: center;" class="container">
@@ -38,7 +38,7 @@
                       </div>
                       <div class="form-group ">
                         <label for="name">Email</label>
-                        <input type="email" name="email" placeholder="Digite seu email" class="form-control" id="email"
+                        <input type="text" name="email" placeholder="Digite seu email" class="form-control" id="email"
                           required>
                       </div>
                       <div class="form-group">
@@ -59,7 +59,7 @@
 
 
 
-              <div class="col-lg-5 d-flex align-items-stretch">
+              <div class="col-lg-2 d-flex align-items-stretch">
                 <div class="col-lg-20 mt-5 mt-lg-0 d-flex align-items-stretch">
 
                   <form action="/CadastroValor" method="get" role="form" class="php-email-form">
@@ -73,13 +73,13 @@
                       <br>
                       <div class="text-center">
 
-                        <button type="submit">Perfil Profissional</button>
+                        <button type="submit">Profissional</button>
                       </div>
                   </form>
 
                   <br>
                   <form action="/CadastroValor1">
-                  <div class="text-center"><button type="submit">Perfil Pessoal</button></div><br>
+                  <div class="text-center"><button type="submit">Pessoal</button></div><br>
                 </form>
 
 
@@ -227,6 +227,11 @@
                           id="subject" required>
                       </div>
                       <div class="form-group">
+                        <label for="name">Valor da sua Diaria</label>
+                        <input type="number" class="form-control" placeholder="Ex: 200" name="Diaria"
+                          id="subject" required>
+                      </div>
+                      <div class="form-group">
                         <label for="name">Data Nascimento</label>
                         <input type="date" class="form-control" placeholder="Descreva sua dúvida" name="datanascimento"
                           required></input>
@@ -294,7 +299,7 @@
                       </div>
                       <div class="form-group col-md-6">
                         <label for="name">Email</label>
-                        <input type="email" class="form-control" placeholder="Digite seu email" name="email"
+                        <input type="text" class="form-control" placeholder="Digite seu email" name="email"
                           id="email" required>
                       </div>
                     </div>
