--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,7 +38,7 @@
                       </div>
                       <div class="form-group ">
                         <label for="name">Email</label>
-                        <input type="text" name="email" placeholder="Digite seu email" class="form-control" id="email"
+                        <input type="email" name="email" placeholder="Digite seu email" class="form-control" id="email"
                           required>
                       </div>
                       <div class="form-group">
@@ -299,7 +299,7 @@
                       </div>
                       <div class="form-group col-md-6">
                         <label for="name">Email</label>
-                        <input type="text" class="form-control" placeholder="Digite seu email" name="email"
+                        <input type="email" class="form-control" placeholder="Digite seu email" name="email"
                           id="email" required>
                       </div>
                     </div>
